# tcs-daily

./: .gitignore  README.md  app.js  index.html  pyproject.toml  run_codex.py  style.css
.agents/skills/tcs-daily/: SKILL.md
.agents/skills/tcs-daily/scripts/: history.py  manifest.py
posts/: 2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-31.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  (+18 more)
tcs_daily/: __init__.py  __main__.py  _http.py  cache.py  cli.py  config.py  fetch.py  memory.py  pdf.py  tags.py
