[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tcs-daily"
version = "0.2.0"
description = "Self-contained TCS daily reading report generator."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "certifi>=2024.0.0",
    "pymupdf>=1.24,<2",
]

[project.scripts]
tcs-daily = "tcs_daily.cli:main"

[tool.setuptools.packages.find]
include = ["tcs_daily*"]
